--- a/order/package.json
+++ b/order/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.10.1",
