--- a/users/package.json
+++ b/users/package.json
@@ -25,12 +25,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.10.1",
     "amqp-connection-manager": "^4.1.10",
     "amqplib": "^0.10.3",
     "apollo-server-express": "^3.11.1",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
