--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,8 +1,13 @@
 {
+  "scripts": {
+    "dev": "nodemon app.mjs",
+    "start": "node app.mjs"
+  },
   "dependencies": {
     "@apollo/gateway": "^2.3.2",
     "apollo-server": "^3.11.1",
     "apollo-server-express": "^3.11.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0"
